--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
-
+  <p> This is the first project for me. Trying to figure out how to work it out rigthly</p>
 </body>
 </html>
