changing to the given example at tutorial

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-  <p> This is the first project for me. Trying to figure out how to work it out rigthly</p>
+<p>Hello World! I’m Rg-drvlGH. This is my website!</p>
+
 </body>
 </html>
